[FIX] web_editor: select small icons in website editor
Issue:
======
small icons can't be removed in website editor

Steps to reproduce the issue:
=============================
- Go to website editor
- Change the  navbar template to the sidebar on the left
- removing the icon of email and phone doesn't always work.
- If you can't reproduce like that, try to remove the span around the
  `a` element , for some reason the issue happens in this case more.

Origin of the issue:
====================
The handles are too wide for the small icon so they cover it completely
and we can't put the selection on the icon.

Solution:
=========
We minimize the size of the handles by a percentage of the size to take
care of this case.

task-3522397

--- a/addons/web_editor/static/src/scss/wysiwyg_snippets.scss
+++ b/addons/web_editor/static/src/scss/wysiwyg_snippets.scss
@@ -2027,7 +2027,7 @@ body.editor_enable.editor_has_snippets {
 
                 &.w {
                     @include o-position-absolute($o-we-handles-offset-to-hide, auto, -$o-we-handles-offset-to-hide, 0);
-                    width: $o-we-handle-edge-size;
+                    width: calc(min(#{$o-we-handle-edge-size}, 25%));
                     border-width: $o-we-handle-border-width;
                     border-right-width: 0;
                     cursor: e-resize;
@@ -2039,7 +2039,7 @@ body.editor_enable.editor_has_snippets {
                 }
                 &.e {
                     @include o-position-absolute($o-we-handles-offset-to-hide, 0, -$o-we-handles-offset-to-hide, auto);
-                    width: $o-we-handle-edge-size;
+                    width: calc(min(#{$o-we-handle-edge-size}, 25%));
                     border-right-width: $o-we-handle-border-width;
                     cursor: w-resize;
 
@@ -2050,7 +2050,7 @@ body.editor_enable.editor_has_snippets {
                 }
                 &.n {
                     @include o-position-absolute($o-we-handles-offset-to-hide, 0, auto, 0);
-                    height: $o-we-handle-edge-size;
+                    height: calc(min(#{$o-we-handle-edge-size}, 25%));
                     border-top-width: $o-we-handle-border-width;
                     cursor: ns-resize;
 
@@ -2061,7 +2061,7 @@ body.editor_enable.editor_has_snippets {
                 }
                 &.s {
                     @include o-position-absolute(auto, 0, -$o-we-handles-offset-to-hide, 0);
-                    height: $o-we-handle-edge-size;
+                    height: calc(min(#{$o-we-handle-edge-size}, 25%));
                     border-bottom-width: $o-we-handle-border-width;
                     cursor: ns-resize;
 
